#
#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
#
[package]
name = "zenoh-python"
version = "1.2.0"
authors = [
  "kydos <angelo@icorsaro.net>",
  "Julien Enoch <julien@enoch.fr>",
  "Olivier Hécart <olivier.hecart@adlinktech.com>",
  "Luca Cominardi <luca.cominardi@gmail.com>",
  "Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The Zenoh Python API"
readme = "README.md"

[lib]
name = "zenoh"
crate-type = ["cdylib"]

[features]
default = ["zenoh/default", "zenoh-ext"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
flume = "0.11.0"
json5 = "0.4.1"
paste = "1.0.14"
pyo3 = { version = "0.21.2", features = [
  "extension-module",
  "abi3-py38",
  "experimental-async",
  "experimental-declarative-modules",
] }
validated_struct = "2.1.0"
zenoh = { version = "1.2.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.2.0", features = ["unstable", "internal"], default-features = false }
zenoh-ext = { version = "1.2.0", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.2.0", features = ["internal"], optional = true }
