#
#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
#
[package]
name = "zenoh-python"
version = "1.7.2"
authors = [
  "kydos <angelo@icorsaro.net>",
  "Julien Enoch <julien@enoch.fr>",
  "Olivier Hécart <olivier.hecart@adlinktech.com>",
  "Luca Cominardi <luca.cominardi@gmail.com>",
  "Pierre Avital <pierre.avital@adlinktech.com>",
]
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "The Zenoh Python API"
readme = "README.md"

[lib]
name = "zenoh"
crate-type = ["cdylib"]

[features]
default = ["shared-memory", "zenoh-ext", "zenoh/default"]
shared-memory = ["zenoh/shared-memory"]
zenoh-ext = ["dep:zenoh-ext", "zenoh-ext/internal", "zenoh-ext/unstable"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
paste = "1.0.14"
pyo3 = { version = "0.25.1", features = ["abi3-py39", "extension-module"] }
zenoh = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.7.2", features = ["internal", "unstable"], default-features = false }
zenoh-ext = { version = "1.7.2", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "release/1.7.2", features = ["internal"], optional = true }
